--- a/css/footer.css
+++ b/css/footer.css
@@ -7,7 +7,7 @@
 
 .footer-titles
 {
-    font-family: Agency FB;
+    font-family: 'agency_fbregular', sans-serif;
     font-size: 18px;
     font-weight: bolder;
 
@@ -16,13 +16,13 @@
 }
 .address
 {
-    font-family: Gibson;
+    font-family: 'gibsonregular', sans-serif;
     font-size: 14px;
     line-height: 24px;
 }
 .contan-num
 {
-    font-family: Gibson;
+    font-family: 'gibsonregular', sans-serif;
     font-size: 24px;
     line-height: 35px;
 
@@ -36,7 +36,7 @@
 }
 .accepts
 {
-    font-family: Gibson;
+    font-family: 'gibsonregular', sans-serif;
     font-size: 16px;
 
     margin-top: 30px;
@@ -44,7 +44,7 @@
 }
 .list > ul > li
 {
-    font-family: Gibson;
+    font-family: 'gibsonregular', sans-serif;
     font-size: 14px;
     font-style: italic;
     line-height: 24px;
@@ -70,7 +70,7 @@
 }
 .copyright
 {
-    font-family: Gibson;
+    font-family: 'gibsonregular', sans-serif;
     font-size: 12px;
 
     margin-top: 20px;
