--- a/css/navigator.css
+++ b/css/navigator.css
@@ -53,7 +53,7 @@ a
 
 .book-online
 {
-    font-family: 'Agency FB', sans-serif;
+    font-family: 'agencyfb_bold', sans-serif;
     font-size: 24px;
     font-weight: bold;
 
