--- a/css/workforce.css
+++ b/css/workforce.css
@@ -9,18 +9,18 @@
 }
 .workforce
 {
-    font-family: Agency FB;
+    font-family: 'agencyfb_regular', sans-serif;
     font-size: 36px;
 }
 .member-title
 {
-    font-family: Agency FB;
+    font-family: 'agencyfb_bold', sans-serif;
     font-size: 16px;
     font-weight: bold;
 }
 .member-description
 {
-    font-family: Gibson;
+    font-family: 'gibsonregular', sans-serif;
     font-size: 16px;
     line-height: 24px;
 
