--- a/css/booking-form.css
+++ b/css/booking-form.css
@@ -111,7 +111,7 @@
 }
 .btn
 {
-    font-family: 'agencyfb_bold', sans-serif;
+    font-family: 'agency_fbbold', sans-serif;
     font-size: 20px;
     font-weight: bold;
     line-height: 20px;
