--- a/css/workforce.css
+++ b/css/workforce.css
@@ -14,7 +14,7 @@
 }
 .member-title
 {
-    font-family: 'agencyfb_bold', sans-serif;
+    font-family: 'agency_fbbold', sans-serif;
     font-size: 16px;
     font-weight: bold;
 }
